--- a/config/c.config
+++ b/config/c.config
@@ -1,5 +1,8 @@
 [{kernel,
-  [{distributed, [{chucky, 5000, [a@Davids-MacBook-Pro-2, {b@Davids-MacBook-Pro-2, c@Davids-MacBook-Pro-2}]}]},
-           {sync_nodes_mandatory, [a@Davids-MacBook-Pro-2, b@Davids-MacBook-Pro-2]},
-           {sync_nodes_timeout, 30000}
-]}].
+  [{distributed,
+    [{chucky,
+      5000,
+      [a@localhost, {b@localhost, c@localhost}]}]},
+   {sync_nodes_mandatory, [a@localhost, b@localhost]},
+   {sync_nodes_timeout, 30000}
+  ]}].
